@@ -10,6 +10,9 @@
      [servconf.c servconf.h sshd.c sshd_config sshd_config.5]
      bz #898: support AddressFamily in sshd_config. from
      peak@argo.troja.mff.cuni.cz; ok deraadt@
+   - markus@cvs.openbsd.org 2005/01/05 08:51:32
+     [sshconnect.c]
+     remove dead code, log connect() failures with level error, ok djm@
 
 20050118
  - (dtucker) [INSTALL Makefile.in configure.ac survey.sh.in] Implement
@@ -1982,4 +1985,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3611 2005/01/19 23:57:56 dtucker Exp $
+$Id: ChangeLog,v 1.3612 2005/01/20 00:00:46 dtucker Exp $
